--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,6 +56,14 @@ hr{
     right: 40px;
  }
 
+ .date-form{
+    float: left;
+    width: 100%;
+    text-align: start;
+    margin-bottom: 10px;
+    color: #a31aff;
+ }
+
  @media all and (max-device-width: 480px){
     .right{
         display: none;
